shalinee | TEST | correct alignment of icons

--- a/apps/web-giddh/src/app/shared/header/components/hamburger-menu/hamburger-menu.component.scss
+++ b/apps/web-giddh/src/app/shared/header/components/hamburger-menu/hamburger-menu.component.scss
@@ -32,4 +32,5 @@
 .nav.navbar-nav {
     position: relative;
     z-index: 10;
+    background-color: $alice-blue-light;
 }
